--- a/flaskapp/app/templates/users.html
+++ b/flaskapp/app/templates/users.html
@@ -1,11 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<body>
-    <h1>Hello, {{ user.username }}!</h1>
-    <h3>Your tasks today!</h3>
-    {% for task in tasks %}
-    <div>- {{ task.title }}</div>
+    <h3>All users in database:</h3>
+    {% for user in users %}
+    <div>- {{ user.id }}: {{ user.username }}</div>
     {% endfor %}
-</body>
 {% endblock %}
