--- a/flaskapp/app/templates/index.html
+++ b/flaskapp/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hello! Welcome to Task Planner.</h1>
+    <h1>Hello {{ current_user.username }}! Welcome to Task Planner.</h1>
     <a href='/users'>link to users</a><br/>
 {% endblock %}
