--- a/flaskapp/app/templates/base.html
+++ b/flaskapp/app/templates/base.html
@@ -11,7 +11,11 @@
         <div>
             Task Planner:
             <a href="{{ url_for('hello') }}">Home</a>
-            <a href="{{ url_for('login') }}">Login</a>
+            {% if current_user.is_anonymous %}
+                <a href="{{ url_for('login') }}">Login</a>
+            {% else %}
+                <a href="{{ url_for('logout') }}">Logout</a>
+            {% endif %}
             <a href="{{ url_for('users') }}">Users</a>
         </div>
         {% with messages = get_flashed_messages() %}
