--- a/flaskapp/app/templates/index.html
+++ b/flaskapp/app/templates/index.html
@@ -2,5 +2,6 @@
 
 {% block content %}
     <h1>Hello {{ current_user.username }}! Welcome to Task Planner.</h1>
-    <a href='/users'>link to users</a><br/>
+    <a href={{ url_for('users') }}>List of all Users</a><br/>
+    <a href={{ url_for('task_list') }}>My tasks</a><br/>
 {% endblock %}
