--- a/flaskapp/app/templates/task_create.html
+++ b/flaskapp/app/templates/task_create.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
     <h1>Create Task</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
