--- a/flaskapp/app/templates/task_list.html
+++ b/flaskapp/app/templates/task_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
     <h3>My tasks:</h3>
     <table width="60%" border="1" cellpadding="4" valign="top">
         <tr>
