--- a/flaskapp/app/templates/task_list.html
+++ b/flaskapp/app/templates/task_list.html
@@ -2,7 +2,7 @@
 
 {% block app_content %}
     <h3>My tasks:</h3>
-    <table width="60%" border="1" cellpadding="4" valign="top">
+    <table class="table table-hover">
         <tr>
             <th>Name</th><th>Created time</th>
             <th>Complexity</th><th>Importance</th><th>Urgency</th>
